# kathrikaish

./: .gitignore  Cargo.toml  README.md  justfile
src/: main.rs  prompt.rs  sfx_hooks.rs
