[package]
name = "kathrikaish"
author = "Nithin Muthukumar"
about = "Nithin's shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrs = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_mux = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_cd_tools = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_output_capture = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_command_timer = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_run_context = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_cd_stack = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_file_logger = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_insulter = { git = "https://github.com/nithinmuthukumar/shrs_insulter"}
shrs_presence = { git = "https://github.com/nithinmuthukumar/shrs_presence"}



dirs = "5"

crossterm = "0.26"
clap = "4.4.12"


